--- a/240208/style.css
+++ b/240208/style.css
@@ -44,6 +44,162 @@ body {
   height: calc(100% - 80px);
   overflow: hidden;
 }
+/* ##### Section : Home ##### */
+.home-inner {
+  background: #fff;
+  height: 100%;
+}
+.home-inner::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 0;
+  height: 100%;
+  background: #000;
+  animation: overlay 1s 2s ease-in-out;
+  animation-fill-mode: both;
+}
+@keyframes overlay {
+  0% {
+    width: 0;
+    left: 0;
+  }
+  50% {
+    width: 100%;
+    left: 0;
+  }
+  100% {
+    width: 0;
+    left: 100%;
+  }
+}
+.welcome-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font: 50px/5rem "Source Code Pro";
+  margin: 0;
+  animation: slideup 2s linear;
+  animation-fill-mode: both;
+}
+.welcome-text span {
+  display: block;
+  text-align: center;
+  font-size: 26px;
+}
+.welcome-text span .fas {
+  color: crimson;
+}
+@keyframes slideup {
+  0% {
+    margin-top: 50px;
+    opacity: 0;
+  }
+  20% {
+    margin-top: 0;
+    opacity: 1;
+  }
+  80% {
+    margin-top: 0;
+    opacity: 1;
+  }
+  100% {
+    margin-top: -50px;
+    opacity: 0;
+  }
+}
+.opacity-image {
+  background: url("./images/section-bg-01.jpg") center/cover no-repeat;
+  height: 100%;
+  opacity: 0;
+  animation: opacity-image 1s 2.5s ease-in;
+  animation-fill-mode: both;
+}
+@keyframes opacity-image {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.home-heading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+}
+.home-heading span {
+  display: block;
+  font: 600 115px/12rem "Montserrat";
+  width: 0;
+  overflow: hidden;
+  animation: reveal 1s 3s linear;
+  animation-fill-mode: both;
+}
+.home-heading span:nth-child(1) {
+  animation-delay: 3s;
+}
+.home-heading span:nth-child(2) {
+  animation-delay: 3.2s;
+}
+.home-heading span:nth-child(3) {
+  animation-delay: 3.4s;
+}
+
+@keyframes reveal {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+/* ##### Section : About ##### */
+.about-inner {
+  background: #0dace3 url("./images/line-drawing.png") no-repeat right bottom;
+  height: 100%;
+}
+.about-items {
+  width: 45%;
+  margin: 0 auto;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  margin-left: 150px;
+}
+.item {
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+.item img {
+  height: 100px;
+  float: left;
+  margin-right: 20px;
+  filter: invert(1);
+  transition: all 0.5s;
+}
+.item:hover img {
+  filter: invert(0);
+}
+.item h3 {
+  font: 500 28px/1 "Montserrat";
+  transition: all 0.5s;
+  letter-spacing: -1px;
+}
+.item:hover h3 {
+  color: #000;
+}
+.item p {
+  font-size: 18px;
+  margin-top: 5px;
+}
+
 /* ##### Section : Project ##### */
 .project-inner {
   height: 100%;
@@ -121,6 +277,7 @@ input[id="tab2"]:checked ~ .tabs {
 input[id="tab3"]:checked ~ .tabs {
   margin-left: -200%;
 }
+
 /*project-info*/
 .project-info {
   width: 25%;
@@ -189,7 +346,25 @@ input[id="tab3"]:checked ~ .tabs {
 .view-project:hover .fa {
   margin-left: 30px;
 }
-
+/* featherlight */
+.featherlight .featherlight-content {
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  margin-left: 0;
+  margin-right: 0;
+  padding: 0;
+}
+.featherlight-content iframe {
+  width: 100%;
+  height: 100%;
+}
+.featherlight .featherlight-close-icon {
+  top: 30px;
+  right: 70px;
+  font-size: 40px;
+}
 /* ##### Section : Plan ##### */
 /* plan info */
 .plan-inner {
