--- a/240203/style.scss
+++ b/240203/style.scss
@@ -2,7 +2,7 @@
 @import "variable";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400;500&display=swap");
-
+/*============= Desktop ============ */
 #body {
   width: 100%;
   height: 100%;
@@ -14,13 +14,9 @@
 }
 header {
   position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   height: 80px;
   margin: 0 auto;
-  gap: 30%;
   z-index: 100;
   background: #fff;
   &.active {
@@ -28,21 +24,17 @@ header {
     color: #fff;
   }
   h1 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: start;
-    align-items: center;
+    position: absolute;
+    left: 5%;
+    display: inline-block;
     width: 800px;
-    height: auto;
     span {
-      display: inline-block;
-      padding-top: 8px;
       i {
         color: #d35583;
         // color: #fff;
         font-size: 50px;
-        text-align: center;
-        display: inline-block;
+
+        text-align: right;
         width: 50px;
         height: 50px;
         &.active {
@@ -50,32 +42,29 @@ header {
         }
       }
     }
-
     a {
       font-size: 50px;
       font-family: map-get($font-family, main);
       font-weight: bold;
-      display: block;
     }
   }
   .btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     height: 100%;
-    gap: 50px;
-    position: relative;
+    position: absolute;
+    top: 27%;
+    right: 5%;
     a {
       span {
         font-family: map-get($font-family, main);
         font-size: 22px;
         font-weight: 500;
+        margin: 10px;
       }
     }
   }
 }
-
 .container {
+  border: 1px solid red;
   background: url("./img/bg_main.jpg");
   width: 100%;
   height: 920px;
@@ -557,7 +546,7 @@ header {
           font-weight: 600;
           position: absolute;
           top: 10%;
-          left: 50%;
+          left: 48%;
         }
         .viewmore {
           background: #f8d77a;
@@ -579,6 +568,595 @@ header {
             transform: translate(-50%, -50%);
             font-size: 2em;
             color: #fff;
+          }
+        }
+      }
+    }
+  }
+}
+/*============= tablet============ */
+@media screen and (max-width: 768px) {
+  header {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80px;
+    margin: 0 auto;
+    gap: 5%;
+    z-index: 100;
+    background: #fff;
+    &.active {
+      background: #ff5484;
+      color: #fff;
+    }
+    h1 {
+      position: absolute;
+      left: 5%;
+      bottom: 14px;
+      display: inline-block;
+      width: 800px;
+      span {
+        i {
+          color: #d35583;
+          // color: #fff;
+          font-size: 50px;
+          text-align: right;
+          width: 50px;
+          height: 50px;
+          &.active {
+            color: #fff;
+          }
+        }
+      }
+    }
+    .btn {
+      display: none;
+      width: 100%;
+      height: 160px;
+      position: absolute;
+      left: 0;
+      top: 100%;
+      &.active {
+        display: block;
+      }
+      a {
+        display: block;
+        width: 100%;
+        height: 50px;
+        background-color: #d35583;
+        border-bottom: 1px solid #fff;
+        span {
+          display: inline-block;
+          margin-left: 30px;
+          font-family: map-get($font-family, main);
+          font-size: 22px;
+          font-weight: 500;
+        }
+      }
+    }
+    .trigger {
+      position: absolute;
+      right: 5%;
+      top: 50%;
+      transform: translateY(-40%);
+      cursor: pointer;
+      span {
+        display: block;
+        width: 40px;
+        height: 2px;
+        margin-bottom: 8px;
+        background: #000;
+      }
+    }
+  }
+  .container {
+    background: url("./img/bg_main.jpg");
+    width: 100%;
+    height: 920px;
+    padding: 100px 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .frame {
+      display: flex;
+      align-items: center;
+      justify-content: end;
+      height: 90%;
+      width: 1500px;
+      position: relative;
+      border: 10px solid #d35583;
+      box-shadow: 0 0 10px #a92f51;
+      border-radius: 200px;
+      overflow: hidden;
+      &::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: url("./img/pen.jpg") center/cover;
+        opacity: 0.8;
+        border-radius: 190px;
+      }
+      .content {
+        display: flex;
+        float: left;
+        width: 75%;
+        height: 420px;
+        padding-right: 70px;
+        justify-content: center;
+        .name {
+          width: 30%;
+          height: 100%;
+          padding-right: 30px;
+          display: flex;
+          flex-flow: column wrap;
+          justify-content: center;
+          align-items: end;
+          gap: 12%;
+          span {
+            color: #222;
+            font-size: map-get($font-size, large-heading);
+            font-family: map-get($font-family, main);
+            font-weight: 900;
+            font-style: italic;
+            cursor: pointer;
+            transition: all 0.3s;
+            opacity: 0;
+            animation: name 1s linear;
+            animation-fill-mode: both;
+            &:hover {
+              color: #fff;
+            }
+            &:nth-child(1) {
+              animation-delay: 0.1s;
+            }
+            &:nth-child(2) {
+              animation-delay: 0.5s;
+            }
+            &:nth-child(3) {
+              animation-delay: 0.9s;
+            }
+          }
+        }
+        @keyframes name {
+          0% {
+            opacity: 0;
+            transform: translate(-200px);
+          }
+          100% {
+            opacity: 1;
+            transform: translateX(-80px);
+          }
+        }
+        .slide {
+          width: 100%;
+          margin-right: 22px;
+          ul {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            width: 100%;
+            height: 130px;
+            gap: 8px;
+            li {
+              width: 100%;
+              height: 100%;
+              a {
+                display: block;
+                width: 100%;
+                height: 100%;
+                position: relative;
+                overflow: hidden;
+                &::before {
+                  content: "";
+                  width: 100%;
+                  height: 100%;
+                  position: absolute;
+                  left: 0;
+                  top: 0;
+                  border-radius: 30px;
+                  background: map-get($font-color, secondary-dark);
+                  opacity: 0;
+                  transition: all 0.3s;
+                }
+                &:hover::before {
+                  opacity: 0.6;
+                }
+                h1 {
+                  width: 100%;
+                  position: absolute;
+                  left: 50%;
+                  top: 150%;
+                  transform: translate(-50%, -50%);
+                  text-align: center;
+                  font-family: map-get($font-family, sub);
+                  font-size: map-get($font-size, small-heading);
+                  font-weight: 400;
+                  color: #fff;
+                  opacity: 0;
+                  transition: all 0.3s;
+                }
+                &:hover h1 {
+                  top: 50%;
+                  opacity: 1;
+                }
+                img {
+                  width: 100%;
+                  height: 128px;
+                  border-radius: 30px;
+                  object-fit: cover;
+                  object-position: 50% 60%;
+                }
+                #hang {
+                  object-fit: cover;
+                  object-position: 50% 28%;
+                }
+              }
+            }
+          }
+        }
+      }
+      .about {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 25%;
+        height: 100%;
+        display: flex;
+        flex-flow: column nowrap;
+        gap: 10px;
+        div {
+          display: none;
+          width: 100%;
+          animation: side 0.5s linear;
+          animation-fill-mode: both;
+          opacity: 0;
+
+          &:nth-child(1) {
+            height: 40%;
+            background: #be502b;
+            border-radius: 5% 0 5% 5%;
+            animation-delay: 0.3s;
+          }
+          &:nth-child(2) {
+            height: 30%;
+            background: #e4953e;
+            border-radius: 5% 5% 5% 5%;
+            animation-delay: 0.5s;
+          }
+          &:nth-child(3) {
+            height: 30%;
+            background: #508023;
+            border-radius: 5% 0 0 5%;
+            animation-delay: 0.7s;
+          }
+          @keyframes side {
+            0% {
+              opacity: 0;
+              transform: translateX(100px);
+            }
+            100% {
+              opacity: 1;
+              transform: translateX(20px);
+            }
+          }
+        }
+      }
+    }
+  }
+  .section01 {
+    background: white;
+    width: 100%;
+    height: 840px;
+    input {
+      display: none;
+      &[id="tab1"]:checked ~ .section-menu .first-menu {
+        left: 0;
+      }
+      &[id="tab2"]:checked ~ .section-menu .first-menu {
+        left: -1830px;
+      }
+    }
+    .kim {
+      margin: 100px 0 50px 0;
+      text-align: center;
+      h1 {
+        color: #ff5484;
+        font-size: map-get($font-size, large-heading);
+        font-family: map-get($font-family, main);
+        font-weight: 900;
+        font-style: italic;
+      }
+    }
+    .section-menu {
+      width: 1800px;
+      height: 520px;
+      margin: 0 auto;
+      position: relative;
+      overflow: hidden;
+
+      .first-menu {
+        position: absolute;
+        left: 0;
+        top: 10%;
+        width: 5000px;
+        transition: all 0.5s ease-in;
+        .birth {
+          background: #ffbe6f;
+        }
+        .personal {
+          background: #eb9598;
+        }
+        .style {
+          background: #7cc1eb;
+        }
+        .a {
+          background: url("https://img.freepik.com/premium-vector/constellation-scorpio-on-starry-night-background_158677-338.jpg")
+            center/cover no-repeat;
+        }
+        .b {
+          background: url("./img/board.jpg") 50% 60% / cover no-repeat;
+        }
+        .c {
+          background: url("./img/rachel-moenning-zjxYwd4HOu0-unsplash.jpg") 50%
+            70% / cover no-repeat;
+        }
+        div {
+          display: inline-block;
+          width: 400px;
+          height: 400px;
+          border-radius: 50% 50% 0 0;
+          margin: 0 100px;
+          position: relative;
+          h1 {
+            position: absolute;
+            top: 30%;
+            left: 50%;
+            transform: translateX(-50%);
+            font-family: map-get($font-family, main);
+            font-size: map-get($font-size, medium-heading);
+            color: #fff;
+            font-style: italic;
+          }
+          p {
+            display: inline-block;
+            width: 400px;
+            margin-top: 10px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translateX(-50%);
+            font-family: map-get($font-family, sub);
+            font-size: map-get($font-size, small-heading);
+            text-align: center;
+            span {
+              font-family: map-get($font-family, sub);
+              font-size: 35px;
+            }
+            .daytext {
+              position: absolute;
+              left: 28%;
+              top: -20%;
+              animation: daytext 3s 0.1s ease-out infinite;
+              // animation-fill-mode: both;
+            }
+            @keyframes daytext {
+              0% {
+                transform: scale(1);
+              }
+              100% {
+                transform: scale(1.3);
+              }
+            }
+            .personaltext {
+              position: absolute;
+              left: 35%;
+              top: -20%;
+              animation: personaltext 3s linear infinite;
+              animation-delay: 0.2s;
+            }
+            @keyframes personaltext {
+              0% {
+                transform: scale(1);
+              }
+              100% {
+                transform: scale(1.3);
+              }
+            }
+            .styletext {
+              position: absolute;
+              left: 35%;
+              top: -20%;
+              animation: daytext 3s linear infinite;
+              animation-delay: 0.3s;
+            }
+            @keyframes daytext {
+              0% {
+                transform: scale(1);
+              }
+              100% {
+                transform: scale(1.3);
+              }
+            }
+          }
+        }
+      }
+    }
+    .buttons {
+      width: 500px;
+      height: 200px;
+      text-align: center;
+      line-height: 200px;
+      margin: 0 auto;
+      label {
+        margin: 0 5px;
+        display: inline-block;
+        width: 1em;
+        height: 1em;
+        border-radius: 100%;
+        background: #ff5484;
+        cursor: pointer;
+        transition: all 0.3s;
+        &:nth-child(1):hover {
+          transform: scale(1.5);
+          background: #ffbe6f;
+        }
+        &:nth-child(2):hover {
+          transform: scale(1.5);
+          background: #eb9598;
+        }
+        &:nth-child(3):hover {
+          transform: scale(1.5);
+          background: #7cc1eb;
+        }
+      }
+    }
+  }
+  .section02 {
+    background: #ffe4ea;
+    width: 100%;
+    height: 1000px;
+    .yi {
+      padding: 100px 0 50px 0;
+      text-align: center;
+      h1 {
+        color: #ff5484;
+        font-size: map-get($font-size, large-heading);
+        font-family: map-get($font-family, main);
+        font-weight: 900;
+        font-style: italic;
+      }
+    }
+    .section-inner {
+      width: 1500px;
+      height: 60%;
+      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .hobby {
+        width: 350px;
+        height: 550px;
+        background: #f8d77a;
+        border-radius: 10px;
+        overflow: hidden;
+        position: relative;
+        img {
+          width: 280px;
+          float: right;
+          position: absolute;
+          bottom: 3%;
+          right: 4%;
+          border-radius: 10%;
+        }
+        .title {
+          font-family: map-get($font-family, sub);
+          color: #b7751e;
+          font-size: 30px;
+          font-weight: 500;
+          margin: 20px;
+        }
+        .des {
+          font-family: map-get($font-family, main);
+          font-size: 45px;
+          font-weight: 600;
+          margin: 5px;
+          color: #f2c158;
+          text-align: center;
+        }
+      }
+      .hobby-inner {
+        width: 880px;
+        height: 600px;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+        .box {
+          width: 400px;
+          height: 250px;
+          background: #fff;
+          border-radius: 10px;
+          position: relative;
+          .skate {
+            background: #bdbb54;
+            width: 180px;
+            height: inherit;
+            border-radius: 10px;
+            text-align: center;
+            padding-top: 8px;
+            img {
+              width: 110px;
+            }
+          }
+          .soccer {
+            background: #4e77b3;
+            width: 180px;
+            height: inherit;
+            border-radius: 10px;
+            text-align: center;
+            padding-top: 8px;
+            img {
+              margin-top: 22px;
+              width: 150px;
+            }
+          }
+          .dog {
+            background: #fcdebc;
+            width: 180px;
+            height: inherit;
+            border-radius: 10px;
+            text-align: center;
+            padding-top: 8px;
+            img {
+              margin-top: 50px;
+              width: 160px;
+            }
+          }
+          .music {
+            background: #db7760;
+            width: 180px;
+            height: inherit;
+            border-radius: 10px;
+            text-align: center;
+            padding-top: 8px;
+            img {
+              margin-top: 50px;
+              width: 180px;
+            }
+          }
+          span {
+            color: #b7751e;
+            font-size: map-get($font-size, small-heading);
+            font-weight: 600;
+            position: absolute;
+            top: 10%;
+            left: 48%;
+          }
+          .viewmore {
+            background: #f8d77a;
+            width: 3em;
+            height: 3em;
+            border-radius: 100%;
+            position: absolute;
+            bottom: 7%;
+            right: 5%;
+            cursor: pointer;
+            transition: all 0.3s;
+            &:hover {
+              transform: scale(1.2);
+            }
+            i {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              font-size: 2em;
+              color: #fff;
+            }
           }
         }
       }
