--- a/ETUDE/style.css
+++ b/ETUDE/style.css
@@ -1,4 +1,5 @@
 /* reset */
+
 * {
   margin: 0;
   padding: 0;
@@ -19,15 +20,13 @@ header {
   display: flex;
   width: 100%;
   height: 100px;
-  justify-content: center;
   background: lightgray;
 }
 .header-wrap {
-  width: 1920px;
+  width: 100%;
   height: 100px;
 }
 .header-main {
-  position: absolute;
   height: 67px;
   margin: 33px 74px 0 74px;
   display: flex;
@@ -96,18 +95,23 @@ header {
   bottom: 14px;
 }
 .search-click {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 395px;
   background: lightgray;
 }
 .search-click-header {
-  width: 1920px;
+  width: 100%;
   height: 100px;
-  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  gap: 1550px;
+  justify-content: center;
+  /* gap: 1550px; */
+  gap: 81%;
 }
 .search-click-icon {
   display: inline-block;
@@ -154,6 +158,10 @@ header {
   display: inline-block;
   font-size: 24px;
 }
+.search-tag {
+  display: flex;
+  flex-wrap: wrap;
+}
 .search-tag span {
   display: inline-block;
   height: 32px;
@@ -196,38 +204,118 @@ header {
 .toggle-menu {
   font-size: 23px;
 }
+.toggle-menu:hover {
+  border-bottom: 1px solid #000;
+}
 .toggle-menu-inside {
-  display: none;
-  /* display: flex; 나중에 주어야함*/
-  flex-direction: column;
-  width: 195px;
+  width: 220px;
   position: absolute;
-  right: -240px;
-  top: 4px;
-  gap: 10px;
+  right: -260px;
+  top: 20px;
+  opacity: 0;
+  transition: all 0.3s;
+}
+
+.toggle-menu-inside span {
+  height: 40px;
+  font-size: 23px;
+  font-weight: normal;
+  letter-spacing: 0;
+}
+.toggle-menu:hover .menu01,
+.toggle-menu:hover .menu02,
+.toggle-menu:hover .menu05,
+.toggle-menu:hover .menu06,
+.toggle-menu:hover .menu07,
+.toggle-menu:hover .menu08,
+.toggle-menu:hover .menu09 {
+  opacity: 1;
+  transform: translateY(-16px);
+}
+
+.menu02 {
+  top: 80px;
 }
 .menu05 {
-  top: 238px;
+  top: 254px;
 }
 .menu06 {
-  top: 294px;
+  top: 310px;
 }
 .menu07 {
-  top: 356px;
+  top: 374px;
 }
 .menu08 {
-  top: 414px;
+  top: 430px;
 }
 .menu09 {
-  top: 470px;
+  top: 486px;
 }
 .toggle-menu-inner {
   display: flex;
   justify-content: space-between;
 }
+
 .toggle-menu-inner span {
   font-size: 23px;
 }
 .toggle-menu-inner span i {
   font-size: 22px;
+}
+.category-title {
+  font-size: 23px;
+}
+/* .toggle-menu-inner-category {
+  display: inline-block;
+} */
+.category-wrap {
+  width: 300px;
+  height: auto;
+  position: relative;
+}
+.category {
+  display: flex;
+  padding-bottom: 5px;
+  flex-direction: column;
+  font-size: 17px;
+  color: #777;
+}
+.category-wrap div {
+  display: flex;
+  font-size: 17px;
+  font-weight: 600;
+  flex-direction: column;
+  gap: 5px;
+  position: absolute;
+  left: 180px;
+}
+.eye-menu {
+  top: 34px;
+}
+.lip-menu {
+  top: 58px;
+}
+.face-menu {
+  top: 86px;
+}
+.nail-menu {
+  top: 110px;
+}
+.skin-menu {
+  top: 144px;
+}
+.mask-menu {
+  top: 168px;
+}
+.clean-menu {
+  top: 200px;
+}
+.body-menu {
+  top: 226px;
+}
+.hair-menu {
+  top: 254px;
+}
+.tool-menu {
+  top: 282px;
 }
